Move config updater functions to their own class & add helper methods
Took 19 seconds

Took 5 minutes